src/assets/stylesheets/index.scss
/* ... */
/* alert
 ================================================== */
.alert {
  background: #fff;
  color: var(--dark-grey);
  border: none;
  border-radius: 5px;
  box-shadow:
    0 8px 26px -4px rgba(20, 20, 20, 0.15),
    0 8px 9px -5px rgba(20, 20, 20, 0.06);
  font-size: 14px;
  font-weight: 500;
  line-height: 16px;
  margin: 10px 0;
  padding: 15px;
  position: relative;
}
.alert-warning {
  border-top: 5px solid var(--bs-warning) !important;
}

/* color / helper classes
 ================================================== */

.text-muted {
  opacity: 0.7;
  color: inherit !important;
}
.text-bold {
  font-weight: 700;
}
.text-small {
  font-size: 0.75rem;
}
.text-extra-small {
  font-size: 0.65rem;
}
.text-multiline {
  white-space: pre-line;
  word-break: break-word;
}
.opacity-40 {
  opacity: 0.4;
}
.opacity-60 {
  opacity: 0.6;
}

//-- --//
.bg-white {
  background: #fff;
  color: var(--bs-body-color) !important;
}

.bg-primary {
  background: var(--bs-primary) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}
.bg-dark-grey {
  background: var(--dark-grey) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}

.bg-secondary {
  background: var(--bs-secondary) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}
.bg-info {
  background: var(--bs-info) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}
.bg-success {
  background: var(--bs-success) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}

.bg-warning {
  background: var(--bs-warning) !important;
}
.bg-danger {
  background: var(--bs-danger) !important;
  color: rgba(255, 255, 255, 0.9) !important;
}

.bg-light-grey {
  background: var(--light-grey) !important;
}
.bg-middle-grey {
  background: var(--middle-grey) !important;
}

// -- color content adaptions -- //

a {
  &.bg-primary,
  &.bg-dark-grey,
  &.bg-secondary,
  &.bg-success,
  &.bg-warning,
  &.bg-danger,
  &.bg-info {
    color: rgba(255, 255, 255, 0.9);
  }
}
a {
  &.bg-white,
  &.bg-light-grey,
  &.bg-middle-grey {
    color: var(--bs-body-color) !important;
  }
}

section {
  &.bg-primary,
  &.bg-dark-grey,
  &.bg-secondary,
  &.bg-success,
  &.bg-danger,
  &.bg-info {
    a:not(.btn),
    p,
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    .h1,
    .h2,
    .h3,
    .h4,
    .h5,
    .h6,
    th,
    td {
      color: rgba(255, 255, 255, 0.9);
    }
    .btn-outline-primary,
    .btn-outline-secondary {
      color: #fff;
      border-color: #fff;
    }
    .text-primary {
      color: var(--bs-primary) !important;
    }
    .text-secondary {
      color: var(--bs-secondary) !important;
    }
  }
}

section {
  flex: 1;
  &.bg-white,
  &.bg-light-grey,
  &.bg-middle-grey {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    .h1,
    .h2,
    .h3,
    .h4,
    .h5,
    .h6 {
      color: var(--headline) !important;
    }
    a:not(.btn),
    p {
      color: var(--bs-body-color);
    }
    .text-primary {
      color: var(--bs-primary) !important;
    }
    .text-secondary {
      color: var(--bs-secondary) !important;
    }
  }
}
// -- new override -- //

section .card {
  &.bg-white,
  &.bg-light-grey,
  &.bg-middle-grey {
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    .h1,
    .h2,
    .h3,
    .h4,
    .h5,
    .h6 {
      color: var(--headline) !important;
    }
    a:not(.btn),
    p,
    th,
    td {
      color: var(--bs-body-color);
    }
    .text-primary {
      color: var(--bs-primary) !important;
    }
    .text-secondary {
      color: var(--bs-secondary) !important;
    }
  }
}

section .card {
  &.bg-primary,
  &.bg-dark-grey,
  &.bg-secondary,
  &.bg-success,
  &.bg-danger,
  &.bg-info {
    a:not(.btn),
    p,
    h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    .h1,
    .h2,
    .h3,
    .h4,
    .h5,
    .h6,
    th,
    td,
    .form-label,
    .text-mandatory {
      color: rgba(255, 255, 255, 0.9) !important;
    }
    .btn-outline-primary,
    .btn-outline-secondary {
      color: #fff;
      border-color: #fff;
    }
    .text-primary {
      color: var(--bs-primary) !important;
    }
    .text-secondary {
      color: var(--bs-secondary) !important;
    }
  }
}

.text-dark-grey {
  color: var(--dark-grey);
}
.text-middle-grey {
  color: var(--middle-grey);
}
.text-light-grey {
  color: var(--light-grey);
}

section .card.no-color-adaption {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6,
  .form-label {
    color: var(--headline) !important;
  }
  a:not(.btn),
  p,
  th,
  td {
    color: var(--bs-body-color) !important;
  }
}

/* Language Icon
 ================================================== */

img.img-flag {
  display: inline-block;
  height: 15px;
  margin: -3px 6px 0 0;
  max-width: 17px;
}

/* Bootstrap Icons - Sizes Add-on
 ================================================== */

.bi {
  &.bi-1x {
    font-size: 1em;
    line-height: 1;
  }
  &.bi-2x {
    font-size: 1.5em;
    line-height: 1;
  }
  &.bi-3x {
    font-size: 2em;
    line-height: 1;
  }
  &.bi-4x {
    font-size: 2.5em;
    line-height: 1;
  }
  &.bi-5x {
    font-size: 3em;
    line-height: 1;
  }
}

/* section / card background upgrades
 ================================================== */

aside,
section:has(.img-background),
.card,
.carousel-item {
  position: relative;
  overflow: hidden;
  z-index: 1;
}
header section {
  overflow: visible;
  position: relative;
  z-index: 2;
}

.card {
  --bs-card-spacer-y: 2rem;
  --bs-card-spacer-x: 2rem;
  --bs-card-cap-padding-y: 1rem;
  --bs-card-cap-padding-x: 2rem;
  --bs-card-title-spacer-y: 0.5rem;
  --bs-card-border-width: 0;
  --bs-card-border-color: rgba(108, 117, 140, 0.15);
  --bs-card-border-radius: var(--jr-border-radius);
  --bs-card-box-shadow: var(--jr-box-shadow);
  --bs-card-inner-border-radius: 0.4375rem;
  --bs-card-cap-bg: transparent;
  box-shadow: var(--jr-box-shadow);
}
.card.bg-white .bi {
  color: var(--bs-primary) !important;
}

.card-body {
  position: relative;
  z-index: 1;
}
/* ... */

